@@ -1,5 +1,10 @@
 # $Id$
 
+2008-07-20	Ivan Y. Khvostishkov
+
+	* core/Base/IntervalUnit.class.php: helper for time intervals, very
+	useful for OLAP.
+
 2008-07-29	Sergey S. Sergeev
 
 	* core/Form/Primitives/PrimitiveIdentifierList.class.php,
